--- a/datatags-app/app/views/comps/comments.scala.html
+++ b/datatags-app/app/views/comps/comments.scala.html
@@ -1,8 +1,8 @@
-@(formID:String, versionPolicyModelID:String, version:Int, locOpt:Option[String], targetType:String, targetContent:String, buttonClass:String="btn-outline-dark")
+@(formID:String, modelID:String, version:Int, locOpt:Option[String], targetType:String, targetContent:String, buttonClass:String="btn-outline-dark")
 <div class="commentComponent">
   <button type="button" onclick="Comments.toggleForm('@formID')" class="btn btn-sm @buttonClass"><i class="fa fa-edit"></i> Comment</button>
   <div class="commentFormDiv" id="@formID" style="display:none">
-    <input type="hidden" data-role="versionPolicyModelID" value="@versionPolicyModelID">
+    <input type="hidden" data-role="modelID" value="@modelID">
     <input type="hidden" data-role="version" value="@version">
     <input type="hidden" data-role="targetType" value="@targetType">
     <input type="hidden" data-role="targetContent" value="@targetContent">
