--- a/datatags-app/app/views/templates/backend.scala.html
+++ b/datatags-app/app/views/templates/backend.scala.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="@routes.BackendCtrl.index()">Dashboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="@routes.PolicyKitManagementCtrl.showVpmList()">Models</a>
+        <a class="nav-link" href="@routes.ModelCtrl.showModelsList()">Models</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="@routes.UsersCtrl.showUserList()">Users</a>
