--- a/datatags-app/app/views/backoffice/versionEditor.scala.html
+++ b/datatags-app/app/views/backoffice/versionEditor.scala.html
@@ -1,12 +1,12 @@
-@(form:Form[PmvFormData], modelId:String, versionNumber:Option[Int])
+@(form:Form[VersionFormData], modelId:String, versionNumber:Option[Int])
 
 @scripts = {
   <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
-  <script type="text/javascript" src="@routes.Assets.at("js/versionedPolicyModelEditor.js")"></script>
+  <script type="text/javascript" src="@routes.Assets.at("js/modelEditor.js")"></script>
 }
 
 
-@templates.backend("Versioned Policy Model Editor", 'backOffice, scripts ) {
+@templates.backend("Model Editor", 'backOffice, scripts ) {
 
   <div class="row my-2">
     <div class="col">
@@ -18,7 +18,7 @@
   </div>
   <div class="row my-2">
     <div class="col">
-      <form enctype="multipart/form-data" action="@versionNumber.map(n=>routes.PolicyKitManagementCtrl.doSaveVersion(modelId, n)).getOrElse(routes.PolicyKitManagementCtrl.doSaveNewVersion(modelId))" method="POST">
+      <form enctype="multipart/form-data" action="@versionNumber.map(n=>routes.ModelCtrl.saveVersion(modelId, n)).getOrElse(routes.ModelCtrl.uploadNewVersion(modelId))" method="POST">
         <div class="form-group row">
           <label for="publicationStatusSelect" class="col-sm-2 col-form-label">Who can view</label>
           <div class="col-sm-10">
@@ -67,7 +67,7 @@
         <div class="form-group row">
           <div class="col text-right">
             <hr>
-            <a href="@routes.PolicyKitManagementCtrl.showVpmPage(modelId)" class="btn btn-secondary">Cancel</a>
+            <a href="@routes.ModelCtrl.showModelPage(modelId)" class="btn btn-secondary">Cancel</a>
             <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </div>
