--- a/datatags-app/app/views/comps/kitMessageList.scala.html
+++ b/datatags-app/app/views/comps/kitMessageList.scala.html
@@ -1,14 +1,13 @@
-@import edu.harvard.iq.datatags.tools.ValidationMessage
-@(messages:Seq[ValidationMessage])
+@(messages:Seq[(String,String)])
 @cap(s:String)={@s(0).toUpper@s.substring(1).toLowerCase}
-@icon(l:ValidationMessage.Level)={@Map(ValidationMessage.Level.ERROR->"fa-times-circle",
-    ValidationMessage.Level.WARNING->"fa-exclamation-triangle",
-    ValidationMessage.Level.INFO->"fa-info-circle"
+@icon(l:String)={@Map("ERROR"->"fa-times-circle",
+  "WARNING"->"fa-exclamation-triangle",
+    "INFO"->"fa-info-circle"
   )(l)}
 @if(messages.nonEmpty){
   <ol class="modelMessageList">
     @for( m <- messages ) {
-      <li class="message@cap(m.getLevel.toString)"><i class="fa @icon(m.getLevel)" aria-hidden="true"></i> @m.getMessage</li>
+      <li class="message@cap(m._1)"><i class="fa @icon(m._1)" aria-hidden="true"></i> @m._2</li>
     }
   </ol>
 } else {
