--- a/datatags-app/app/views/comps/rejectPanel.scala.html
+++ b/datatags-app/app/views/comps/rejectPanel.scala.html
@@ -1,7 +1,7 @@
 @import edu.harvard.iq.datatags.externaltexts.Localization
 @import edu.harvard.iq.datatags.model.graphs.nodes.RejectNode
 @import Helpers.{o2o, renderMarkdown}
-@(node:RejectNode, pmvKit:PolicyModelVersionKit, loc:Option[Localization],
+@(node:RejectNode, kitKey: KitKey, loc:Option[Localization],
         answerHistory:Seq[AnswerRecord], enableComments:Boolean)
 <div class="card">
   <div class="card-header bg-danger text-white d-flex">
@@ -10,7 +10,7 @@
     </div>
     @if( enableComments ){
       <div>
-      @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, loc.map(_.getLanguage), "node", node.getId)
+      @comps.comments("cmnt", kitKey.modelId, kitKey.version, loc.map(_.getLanguage), "node", node.getId)
       </div>
     }
   </div>
